Fix footer content overlap

--- a/sass/components/content/_posts-and-pages.scss
+++ b/sass/components/content/_posts-and-pages.scss
@@ -97,6 +97,7 @@
 @media screen and (min-width:1024px) {
 	.site-main {
 		margin-top: 0;
+		margin-bottom: 2rem;
 		display: grid;
 	}
 
@@ -119,6 +120,8 @@
 
 	.card {
 		grid-column: 1 / 2;
+		width: 50vw;
+		aspect-ratio: 3 / 1;
 	}
 
 	.wp-block-image {
@@ -128,6 +131,7 @@
 		align-self: stretch;
 		margin-right: 0.5rem;
 		border-radius: 15px;
+		width: 33vw;
 	}
 }
 
